Targets must be defined before properties can be set

--- a/GMAO_ods/CMakeLists.txt
+++ b/GMAO_ods/CMakeLists.txt
@@ -39,16 +39,6 @@ if (CMAKE_Fortran_COMPILER_ID MATCHES Intel)
    string (REPLACE "${FTZ}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
    string (REPLACE "${ALIGN_ALL}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
    string (REPLACE "${NO_ALIAS}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
-else ()
-   set_target_properties (${this}     PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (saber2ods.x PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (dconv2ods.x PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odsmatch    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odslist     PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odsselect   PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odsshuffle  PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odsstats    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
-   set_target_properties (odsemean    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
 endif ()
 
 esma_add_library (${this}
@@ -84,6 +74,17 @@ if (EXTENDED_SOURCE)
   set_target_properties (odsemean  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
 endif()
 
+if (NOT CMAKE_Fortran_COMPILER_ID MATCHES Intel)
+   set_target_properties (${this}     PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (saber2ods.x PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (dconv2ods.x PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odsmatch    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odslist     PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odsselect   PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odsshuffle  PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odsstats    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+   set_target_properties (odsemean    PROPERTIES COMPILE_FLAGS ${BIG_ENDIAN})
+endif ()
 install(
    PROGRAMS unique_instruments.csh obimp_summary.pl diag2ods
    DESTINATION bin
