--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -14,6 +14,14 @@ For Single 2-D Variable Plots:
        YFMT   is the zonal mean Y-Format         (eg: set  ylab %.1f  )
        AXLIM  is the zonal mean Axis Value Range (eg: set  axlim x1 x2)
 
+* To produce Fixed Contour Intervals and Scaling for DIFF and Closeness Plots
+* ---------------------------------------------------------------------------
+  Add, for example: EXPORT_GC_FIXED_PLOT_FACTOR: -2
+  Add, for example: EXPORT_GC_FIXED_PLOT_CINT: 45
+
+  Add, for example: EXPORT_GC_CLOSE_PLOT_FACTOR: -3
+  Add, for example: EXPORT_GC_CLOSE_PLOT_CINT: 10
+
 ************************************************************************************
 
 ************************************************************************************
@@ -92,6 +100,11 @@ SLP_DYN_1000_TITLE: Sea-Level Pressure (hPa)
 SLP_DYN_1000_DLEVS: -18 -16 -14 -12 -10 -8  -6  -4  -2 2 4 6 8 10 12 14 16 18
 SLP_DYN_1000_ALEVS:  -4.5 -4 -3.5 -3 -2.5 -2 -1.5 -1 -.5 0.5 1 1.5 2 2.5 3 3.5 4 4.5
 SLP_DYN_CINT: 4
+
+*SLP_DYN_FIXED_PLOT_FACTOR: -2
+*SLP_DYN_FIXED_PLOT_CINT: 45
+*SLP_DYN_CLOSE_PLOT_FACTOR: 0
+*SLP_DYN_CLOSE_PLOT_CINT: 4
 
 U_DYN_TITLE: Zonal U-Wind (m/s)
 U_DYN_30_CINT:    5
@@ -280,6 +293,11 @@ T_DYN_700_ALEVS:  -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1
 T_DYN_850_ALEVS:  -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1.8 2.1 2.4 2.7
 T_DYN_925_ALEVS:  -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1.8 2.1 2.4 2.7
 T_DYN_1000_ALEVS: -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1.8 2.1 2.4 2.7
+
+*T_DYN_FIXED_PLOT_FACTOR: -2
+*T_DYN_FIXED_PLOT_CINT: 10
+*T_DYN_CLOSE_PLOT_FACTOR: -3
+*T_DYN_CLOSE_PLOT_CINT: 20
 
 O3_CHEMISTRY_TITLE: Ozone (ppm)
 O3_CHEMISTRY_CLAB: off
@@ -1242,8 +1260,11 @@ RMS_DTDT_ANA_AGCM_FACTOR: 86400
 RMS_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Root_Mean_Square Error
 RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
 
-* Uncomment These Parameters to used Fixed Contour Intervals and Scaling in Stat DIFF Plots
-* -----------------------------------------------------------------------------------------
+*RES_DYN_FIXED_PLOT_FACTOR: 0
+*RES_DYN_FIXED_PLOT_CINT: 0.5
+*STR_DYN_FIXED_PLOT_FACTOR: 0
+*STR_DYN_FIXED_PLOT_CINT: 0.2
+
 *RMS_DMDTANA_DYN_FIXED_PLOT_FACTOR: -2
 *RMS_DMDTANA_DYN_FIXED_PLOT_CINT: 1.5
 *RMS_DUDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
