--- a/.github/workflows/changelog-enforcer.yml
+++ b/.github/workflows/changelog-enforcer.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: dangoslen/changelog-enforcer@v1.6.0
+    - uses: dangoslen/changelog-enforcer@issue-58
       with:
         changeLogPath: 'CHANGELOG.md'
-        skipLabels: '"Skip Changelog","0 diff trivial"'
+        skipLabels: 'Skip Changelog,0 diff trivial'
