--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -295,7 +295,7 @@ T_DYN_925_ALEVS:  -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1
 T_DYN_1000_ALEVS: -2.7 -2.4 -2.1 -1.8 -1.5 -1.2  -.9 -.6  -.3 .3 .6 .9 1.2 1.5 1.8 2.1 2.4 2.7
 
 *T_DYN_FIXED_PLOT_FACTOR: -2
-*T_DYN_FIXED_PLOT_CINT: 10
+*T_DYN_FIXED_PLOT_CINT: 15
 *T_DYN_CLOSE_PLOT_FACTOR: -3
 *T_DYN_CLOSE_PLOT_CINT: 20
 
@@ -330,6 +330,11 @@ O3_CHEMISTRY_.5_CVALS: 3.1 3.2 3.3 3.4 3.5 3.6 3.7 3.8 3.9 4 4.1 4.2 4.3 4.4 4.5
 O3_CHEMISTRY_.4_CVALS: 2.5 2.6 2.7 2.8 2.9 3 3.1 3.2 3.3 3.4 3.5 3.6 3.7 3.8 3.9 4 4.1 4.2 4.3
 O3_CHEMISTRY_.3_CVALS: 2.1 2.2 2.3 2.4 2.5 2.6 2.7 2.8 2.9 3 3.1 3.2 3.3 3.4 3.5 3.6 3.7 3.8 3.9
 O3_CHEMISTRY_.1_CVALS: 0.9 1 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8 1.9 2 2.1 2.2 2.3 2.4 2.5 2.6 2.7
+
+*Q_MOIST_FIXED_PLOT_FACTOR: -3
+*Q_MOIST_FIXED_PLOT_CINT: 35
+*Q_MOIST_CLOSE_PLOT_FACTOR: -4
+*Q_MOIST_CLOSE_PLOT_CINT: 35
 
 Q_MOIST_TITLE:      Specific Humidity (g/kg)
 Q_MOIST_30_TITLE:   Specific Humidity (mg/kg)
@@ -624,6 +629,10 @@ DUDTDYN_DYN_200_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTDYN_DYN_150_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTDYN_DYN_100_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 
+*DUDTDYN_DYN_FIXED_PLOT_FACTOR: -2
+*DUDTDYN_DYN_FIXED_PLOT_CINT: 1.2
+*DVDTDYN_DYN_FIXED_PLOT_FACTOR: -2
+*DVDTDYN_DYN_FIXED_PLOT_CINT: 3.0
 
 DVDTDYN_DYN_TITLE: DVDT from Dynamics (m/sec/day)
 DVDTDYN_DYN_FACTOR: 86400
@@ -1253,12 +1262,23 @@ RMS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Mean_Square Error
 RMS_DMDTANA_DYN_FACTOR: 864
 RMS_DUDT_ANA_AGCM_TITLE: DUDT from Analysis (m/sec/day)  Root_Mean_Square Error
 RMS_DUDT_ANA_AGCM_FACTOR: 86400
+RMS_DUDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+RMS_DUDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.5 3 3.5 4 4.5 5 6 7
+RMS_DUDT_ANA_AGCM_ZLOG_CLEVS:  0.5 1.0 1.5 2.0 2.5 3.0 4.0 5.0 6 7 8 9 10 12 15 20 25 30
 RMS_DVDT_ANA_AGCM_TITLE: DVDT from Analysis (m/sec/day)  Root_Mean_Square Error
 RMS_DVDT_ANA_AGCM_FACTOR: 86400
+RMS_DVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+RMS_DVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.5 3 3.5 4 4.5 5 6 7
+RMS_DVDT_ANA_AGCM_ZLOG_CLEVS:  0.5 1.0 1.5 2.0 2.5 3.0 4.0 5.0 6 7 8 9 10 12 15 20 25 30
 RMS_DTDT_ANA_AGCM_TITLE: DTDT from Analysis (K/day)  Root_Mean_Square Error
 RMS_DTDT_ANA_AGCM_FACTOR: 86400
+RMS_DTDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+RMS_DTDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.5 4 4.5
+RMS_DTDT_ANA_AGCM_ZLOG_CLEVS:  0.5 1.0 1.5 2.0 2.5 3.0 4.0 5.0 6 7 8 9 10 11 12 13 14 15
 RMS_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Root_Mean_Square Error
 RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
+RMS_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.2 3.4 3.6
 
 *RES_DYN_FIXED_PLOT_FACTOR: 0
 *RES_DYN_FIXED_PLOT_CINT: 0.5
@@ -1271,10 +1291,10 @@ RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
 *RMS_DUDT_ANA_AGCM_FIXED_PLOT_CINT: 4
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_CINT: 4
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1.5
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 35
 *RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
-*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 1
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 1.5
 
 BIAS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Bias Error
 BIAS_DMDTANA_DYN_FACTOR: 864
@@ -1322,9 +1342,14 @@ DTDT_ANA_AGCM_ZLOG_CLEVS: -6 -4 -3 -2 -1.5 -1 -0.75 -0.5 -.25 .25 .5 0.75 1 1.5 
 DTDT_ANA_AGCM_Z_DLEVS: -2.25 -2 -1.75 -1.5 -1.25 -1 -0.75 -0.5 -.25 .25 .5 0.75 1 1.25 1.5 1.75 2 2.25 
 DTDT_ANA_AGCM_Z_ALEVS: -1.4 -1.2 -1.0 -.8 -.6 -.4 -0.3 -0.2 -.1 .1 .2 .3 .4 .6 .8 1.0 1.2 1.4
 
+*DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1.5
 
 DQVDT_CON_AGCM_TITLE: DQVDT from Constraint (g/kg/day)
 DQVDT_CON_AGCM_FACTOR: 86400000
+
+*DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+*DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 6
 
 DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)
 DQVDT_ANA_AGCM_FACTOR: 86400000
