--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -106,6 +106,11 @@ SLP_DYN_CINT: 4
 *SLP_DYN_CLOSE_PLOT_FACTOR: 0
 *SLP_DYN_CLOSE_PLOT_CINT: 4
 
+*U_DYN_FIXED_PLOT_FACTOR: -3
+*U_DYN_FIXED_PLOT_CINT: 15
+*U_DYN_CLOSE_PLOT_FACTOR: -3
+*U_DYN_CLOSE_PLOT_CINT: 15
+
 U_DYN_TITLE: Zonal U-Wind (m/s)
 U_DYN_30_CINT:    5
 U_DYN_50_CINT:    5
@@ -861,6 +866,9 @@ TIM_PHYSICS_950_CLEVS: -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9
 TIM_PHYSICS_975_CLEVS: -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9
 TIM_PHYSICS_1000_CLEVS: -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9
 
+*TIM_PHYSICS_FIXED_PLOT_FACTOR: -2
+*TIM_PHYSICS_FIXED_PLOT_CINT: 2
+
 DQDT_MOIST_TITLE: DQVDT from Moist Processes (g/kg/day)
 DQDT_MOIST_FACTOR: 86400*1000
 DQDT_MOIST_CBSCALE: 0.6
@@ -905,6 +913,10 @@ CNV_MFC_MOIST_Z_DCOLS: 55 49 47 45 44 36 34 33 32 0 21 22 23 24 25 26 27 28 69
 CNV_MFC_MOIST_Z_DLEVS: -180 -160 -140 -120 -100 -80 -60 -40 -20 20 40 60 80 100 120 140 160
 CNV_MFC_MOIST_Z_ACOLS: 55 49 47 45 44 36 34 33 32 0 21 22 23 24 25 26 27 28 69
 CNV_MFC_MOIST_Z_ALEVS: -180 -160 -140 -120 -100 -80 -60 -40 -20 20 40 60 80 100 120 140 160 
+
+*CNV_MFC_MOIST_FIXED_PLOT_FACTOR: 0
+*CNV_MFC_MOIST_FIXED_PLOT_CINT: 2
+
 
 CNV_MF0_MOIST_TITLE: Cloud Base mass flux  (kg/m`a2`n/day)
 CNV_MF0_MOIST_FACTOR: 86400
@@ -1291,10 +1303,12 @@ RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8
 *RMS_DUDT_ANA_AGCM_FIXED_PLOT_CINT: 4
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_CINT: 4
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 35
-*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
-*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 1.5
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 3.8
+*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 3
 
 BIAS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Bias Error
 BIAS_DMDTANA_DYN_FACTOR: 864
