Updates to use Python2 and Python3 at same time

--- a/GEOS_Util/pre/NSIDC-OSTIA_SST-ICE_blend/CMakeLists.txt
+++ b/GEOS_Util/pre/NSIDC-OSTIA_SST-ICE_blend/CMakeLists.txt
@@ -42,14 +42,15 @@ ecbuild_add_executable (
   SOURCES lake_data_EIGTHdeg.F90
   LIBS ${this})
 
-if (F2PY_FOUND)
-   add_f2py_module(read_ops_bcs
+if (USE_F2PY)
+   find_package(F2PY2)
+   esma_add_f2py2_module(read_ops_bcs
       SOURCES read_bin.f90
       DESTINATION bin
       INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
       )
    add_dependencies(read_ops_bcs ${this})
-endif (F2PY_FOUND)
+endif ()
 
 file(GLOB cshscripts CONFIGURE_DEPENDS *.csh)
 file(GLOB perlscripts CONFIGURE_DEPENDS *.pl)
