fix cmnake list file for arpack so it will build with laest cmake

--- a/arpack/SRC/CMakeLists.txt
+++ b/arpack/SRC/CMakeLists.txt
@@ -25,5 +25,4 @@ esma_add_library (${this}
   SRCS ${SRCS}
   )
 
-
-target_include_directories (${this} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (${this} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
