--- a/GMAO_gfio/CMakeLists.txt
+++ b/GMAO_gfio/CMakeLists.txt
@@ -51,17 +51,19 @@ include_directories (${INC_NETCDF})
 
 if (USE_F2PY)
    if (precision STREQUAL "r4")
-   find_package(F2PY2)
-   esma_add_f2py2_module(GFIO_ SOURCES GFIO_py.F90
-      DESTINATION lib/Python2
-      ONLY gfioopen gfiocreate gfiodiminquire gfioinquire
-      gfiogetvar gfiogetvart gfioputvar gfiogetbegdatetime
-      gfiointerpxy gfiointerpnn gfiocoordnn gfioclose
-      LIBRARIES GMAO_gfio_r4 ${NETCDF_LIBRARIES}
-      INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
-      USE_MPI
-      )
-   add_dependencies(GFIO_ ${this})
+      find_package(F2PY2)
+      if (F2PY2_FOUND)
+         esma_add_f2py2_module(GFIO_ SOURCES GFIO_py.F90
+            DESTINATION lib/Python2
+            ONLY gfioopen gfiocreate gfiodiminquire gfioinquire
+            gfiogetvar gfiogetvart gfioputvar gfiogetbegdatetime
+            gfiointerpxy gfiointerpnn gfiocoordnn gfioclose
+            LIBRARIES GMAO_gfio_r4 ${NETCDF_LIBRARIES}
+            INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
+            USE_MPI
+            )
+         add_dependencies(GFIO_ ${this})
+      endif ()
    endif ()
 endif ()
 
