Fix for linking with eu

--- a/GMAO_mpeu/mpi0/CMakeLists.txt
+++ b/GMAO_mpeu/mpi0/CMakeLists.txt
@@ -38,6 +38,7 @@ set (srcs
    mpi_comm_split.F90
    m_mpi0.F
    Const_MPItype.H
+   ../get_zeits.c
    )
 
 esma_add_library(${this} SRCS ${srcs})
