--- a/GMAO_pyobs/CMakeLists.txt
+++ b/GMAO_pyobs/CMakeLists.txt
@@ -10,23 +10,26 @@ esma_add_library (${this}
   DEPENDENCIES GMAO_gfio_r4
   INCLUDES ${INC_ESMF})
 
-include(UseF2Py)
+if (USE_F2PY)
+   find_package(F2PY2)
+   if (F2PY2_FOUND)
+      esma_add_f2py2_module(binObs_
+         SOURCES binObs_py.F
+         DESTINATION lib/Python/pyobs
+         INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
+         )
+      add_dependencies(binObs_ ${this})
 
-add_f2py_module(binObs_
-   SOURCES binObs_py.F
-   DESTINATION lib/Python/pyobs
-   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
-   )
-add_dependencies(binObs_ ${this})
+      esma_add_f2py2_module(IGBP_
+         SOURCES IGBP_py.F90
+         DESTINATION lib/Python/pyobs
+         ONLY getsimpleveg getdetailedveg
+         LIBRARIES GMAO_pyobs
+         INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
+         )
+      add_dependencies(IGBP_ ${this})
+   endif ()
+endif ()
 
-add_f2py_module(IGBP_
-   SOURCES IGBP_py.F90
-   DESTINATION lib/Python/pyobs
-   ONLY getsimpleveg getdetailedveg
-   LIBRARIES GMAO_pyobs
-   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
-   )
-add_dependencies(IGBP_ ${this})
-
-file (GLOB python_files pyobs/*.py)
+file (GLOB python_files CONFIGURE_DEPENDS pyobs/*.py)
 install (FILES ${python_files} DESTINATION lib/Python/pyobs)
