--- a/GMAO_gfio/CMakeLists.txt
+++ b/GMAO_gfio/CMakeLists.txt
@@ -54,7 +54,7 @@ if (USE_F2PY)
       find_package(F2PY2)
       if (F2PY2_FOUND)
          esma_add_f2py2_module(GFIO_ SOURCES GFIO_py.F90
-            DESTINATION lib/Python2
+            DESTINATION lib/Python
             ONLY gfioopen gfiocreate gfiodiminquire gfioinquire
             gfiogetvar gfiogetvart gfioputvar gfiogetbegdatetime
             gfiointerpxy gfiointerpnn gfiocoordnn gfioclose
