add ozone update for GEOS-IT CVStag: GEOSadas-5_27_1_p4

--- a/GEOS_Util/plots/VERIFICATION_RCS/VERIFICATION.ECANA.rc
+++ b/GEOS_Util/plots/VERIFICATION_RCS/VERIFICATION.ECANA.rc
@@ -2,7 +2,7 @@
 OBSNAM: ecops
 OBSDSC: ECMWF_OPNL_ANA
 
-        filename:   'VERIFICATION/ECMWF_OPS.NCDF3/xdf.tabl'
+        filename:   'VERIFICATION/ECMWF_OPS.NC4/xdf.tabl'
         filetype:   'HDF'
         fields:     'ZLE'      , 'DYN'           , 'HGHT'   , 1
                     'SLP'      , 'DYN'           , 'SLP'    , 1
