--- a/GEOS_Util/plots/VERIFICATION_RCS/VERIFICATION.GDAS1.rc
+++ b/GEOS_Util/plots/VERIFICATION_RCS/VERIFICATION.GDAS1.rc
@@ -2,7 +2,7 @@
 OBSNAM: gdas1
 OBSDSC: NCEP_OPNL_gdas1
 
-        filename:   'VERIFICATION/NCEP_GDAS-1.NCDF3/xdf.tabl'
+        filename:   'VERIFICATION/NCEP_GDAS-1.NC4/xdf.tabl'
         filetype:   'HDF'
         fields:     'ZLE'      , 'DYN'           , 'HGHT'   , 1
                     'SLP'      , 'DYN'           , 'SLP'    , 1
