--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -867,7 +867,7 @@ TIM_PHYSICS_975_CLEVS: -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9
 TIM_PHYSICS_1000_CLEVS: -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9
 
 *TIM_PHYSICS_FIXED_PLOT_FACTOR: -2
-*TIM_PHYSICS_FIXED_PLOT_CINT: 2
+*TIM_PHYSICS_FIXED_PLOT_CINT: 6
 
 DQDT_MOIST_TITLE: DQVDT from Moist Processes (g/kg/day)
 DQDT_MOIST_FACTOR: 86400*1000
@@ -1268,6 +1268,8 @@ STD_DTDT_ANA_AGCM_TITLE: DTDT from Analysis (K/day)  Standard_Deviation Error
 STD_DTDT_ANA_AGCM_FACTOR: 86400
 STD_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Standard_Deviation Error
 STD_DQVDT_ANA_AGCM_FACTOR: 86400000
+STD_DQVDT_ANA_AGCM_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+STD_DQVDT_ANA_AGCM_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.2 3.4 3.6
 
 
 RMS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Mean_Square Error
@@ -1285,12 +1287,13 @@ RMS_DVDT_ANA_AGCM_ZLOG_CLEVS:  0.5 1.0 1.5 2.0 2.5 3.0 4.0 5.0 6 7 8 9 10 12 15 
 RMS_DTDT_ANA_AGCM_TITLE: DTDT from Analysis (K/day)  Root_Mean_Square Error
 RMS_DTDT_ANA_AGCM_FACTOR: 86400
 RMS_DTDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
-RMS_DTDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.5 4 4.5
+*RMS_DTDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.5 4 4.5
+RMS_DTDT_ANA_AGCM_Z_CLEVS:  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1 1.2 1.4 1.6 1.8 2.0 2.4 2.8 3.2
 RMS_DTDT_ANA_AGCM_ZLOG_CLEVS:  0.5 1.0 1.5 2.0 2.5 3.0 4.0 5.0 6 7 8 9 10 11 12 13 14 15
 RMS_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Root_Mean_Square Error
 RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
-RMS_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
-RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.2 3.4 3.6
+*RMS_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+*RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3.0 3.2 3.4 3.6
 
 *RES_DYN_FIXED_PLOT_FACTOR: 0
 *RES_DYN_FIXED_PLOT_CINT: 0.5
@@ -1303,12 +1306,8 @@ RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8
 *RMS_DUDT_ANA_AGCM_FIXED_PLOT_CINT: 4
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
 *RMS_DVDT_ANA_AGCM_FIXED_PLOT_CINT: 4
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
-*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1
-*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
-*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 3.8
-*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
-*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 3
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 4.5
 
 BIAS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Bias Error
 BIAS_DMDTANA_DYN_FACTOR: 864
@@ -1321,6 +1320,28 @@ BIAS_DTDT_ANA_AGCM_FACTOR: 86400
 BIAS_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Root_Bias Error
 BIAS_DQVDT_ANA_AGCM_FACTOR: 86400000
 
+*BIAS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*BIAS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1
+
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 2.0
+RMS_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+RMS_DQVDT_ANA_AGCM_Z_CLEVS:  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8
+RMS_DQVDT_ANA_AGCM_CLEVS:  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1 1.1 1.2 1.4 1.6 1.8 2.0 2.2 2.4 2.6
+
+STD_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -3
+STD_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 30.0
+STD_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+STD_DQVDT_ANA_AGCM_Z_CLEVS:  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8
+
+*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*BIAS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 4
+*BIAS_DQVDT_ANA_AGCM_Z_CCOLS: 50 42 44 46 48 39 37 36 34 32 31 21 22 24 25 26 27 28 29
+ BIAS_DQVDT_ANA_AGCM_Z_CLEVS:  2.5 5.0 7.5 10.0 12.5 15.0 17.5 20.0 22.5 25 27.5 30 32.5 35 37.5 40 42.5 45
+
+*BIAS_DQVDT_ANA_AGCM_CLEVS:  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8 1.9
+ BIAS_DQVDT_ANA_AGCM_CLEVS:  0.05 0.10 0.15 0.20 0.25 0.30 0.35 0.40 0.45 0.50 0.55 0.60 0.65 0.70 0.75 0.80 0.85 0.90 0.95
+ BIAS_DTDT_ANA_AGCM_Z_CLEVS:  0.04 0.08 0.12 0.16 0.20 0.24 0.28 0.32 0.36 0.40 0.44 0.48 0.52 0.56 0.60 0.64 0.68 0.72 0.76
 
 DUDT_ANA_AGCM_TITLE: DUDT from Analysis (m/sec/day)
 DUDT_ANA_AGCM_FACTOR: 86400
@@ -1408,7 +1429,7 @@ DQVDT_AGCM_Z_CLEVS: -1.4 -1.2 -1.0 -.8 -.6 -.4 -0.3 -0.2 -.1 .1 .2 .3 .4 .6 .8 1
 DMDTDYNANAPHY_DYN_TITLE: Surface Pressure Tendency from DYN+ANA+PHY (mb/day)
 DMDTDYNANAPHY_DYN_FACTOR: 9.80665*864
 DMDTDYNANAPHY_DYN_CCOLS: 55  49  47  45  44  36  34  33  32  0  21  22  23  24  25  26  27  28 69
-DMDTDYNANAPHY_DYN_CLEVS: -.3 -.25 -.2 -.15 -.1 -.08 -.06 -.04 -.02 .02 .04 .06 .08 .10 .15 .2 .25 .3
+DMDTDYNANAPHY_DYN_CLEVS: -0.9 -0.8 -0.7 -0.6 -0.5 -0.4 -0.3 -0.2 -0.1 0.1 0.2 0.3 0.4 0.5 .6 0.7 0.8 0.9
 
 DMDTDYNANA_DYN_TITLE: Surface Pressure Tendency from DYN+ANA (mb/day)
 DMDTDYNANA_DYN_FACTOR: 9.80665*864
