3CH and GOCART-2G Plot Updates from L. Takacs

--- a/GEOS_Util/post/plot.rc
+++ b/GEOS_Util/post/plot.rc
@@ -34,7 +34,7 @@
    PLOT_STATUS: ON
   PLOT_SEASONS: DJF JJA
 PLOT_FREQUENCY: CLIM
-  PLOT_OPTIONS:
+  PLOT_OPTIONS: -cintdiff ON
    PLOT_CMPEXP:
      PLOT_MISC: MISC
      PLOT_MOVE: OFF
