--- a/GEOS_Util/post/CMakeLists.txt
+++ b/GEOS_Util/post/CMakeLists.txt
@@ -37,6 +37,7 @@ set_target_properties (stats.x PROPERTIES COMPILE_FLAGS "${BIG_ENDIAN}")
 set_target_properties(stats.x PROPERTIES Fortran_MODULE_DIRECTORY ${include_${this}})
 
 ecbuild_add_executable (TARGET convert_aerosols.x SOURCES convert_aerosols.F)
+ecbuild_add_executable (TARGET 3CH.x SOURCES 3CH.F90)
 
 set (perlscripts
   ecmwf2geos.pl
@@ -51,6 +52,7 @@ install(
 set_property(SOURCE rsg3_vinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN} ${EXTENDED_SOURCE}")
 set_property(SOURCE rs_vinterp.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN}")
 set_property(SOURCE rs_vinterp_scm.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN}")
+set_property(SOURCE 3CH.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
 
 set_property(SOURCE dynamics_lattice_module.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
 set_property(SOURCE mpi_util.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
@@ -89,6 +91,7 @@ target_link_libraries (flat2hdf.x post_nompi GMAO_gfio_r4)
 target_link_libraries (gg2fv.x post)
 target_link_libraries (rs2hdf.x post)
 target_link_libraries (time_ave.x ${this} GMAO_gfio_r4 MAPL )
+target_link_libraries (3CH.x ${this} GMAO_gfio_r4 ${MPI_Fortran_LIBRARIES})
 
 target_link_libraries (rsg3_vinterp.x ${this} GMAO_hermes)
 target_link_libraries (rs_vinterp.x ${this} GMAO_hermes)
