adding proxy for GEOS-IT and R21C

--- a/GMAO_etc/obsys-nccs-geosit.rc
+++ b/GMAO_etc/obsys-nccs-geosit.rc
@@ -1,5 +1,10 @@
 #            NCCS Specific Version
 #
+#   WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
+#                   this is file is place-holder 
+#   WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
+#
+#
 # This observation system resource file database will track
 # the whereabout of observation files.
 #   It will be used by scripts require_obsys (hard check the
